# basic-agents

./: .gitignore  makefile  pyproject.toml
src/: __init__.py  conf.py  main.py
src/evals/: __init__.py  pipeline.py
src/evals/cases/csv_manipulation/: cases.json  grader.py
src/evals/generator/: case_prompt.md  generator.py  idea_prompt.md  models.py  run.py
src/prompts/: csv_manipulator.md  eval_generator.md
src/shared/: __init__.py  llm.py  message_helpers.py  prompt_helpers.py  tool_helpers.py
src/tools/: __init__.py  time.py  time_schemas.py  tool_registry.py
tests/tools/: conftest.py  test_time.py
